fixed so the stopwatch won't follow the scroll on mobile + some small styling changes

--- a/src/components/SleepSession/SleepSession.module.css
+++ b/src/components/SleepSession/SleepSession.module.css
@@ -19,3 +19,7 @@
 .saveButton {
   font-size: 5rem;
 }
+.letterspacing {
+  letter-spacing: .1em;
+  margin-left: .1em;
+}
